--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="google-site-verification" content="GZh2jRE6IgVXx8SYpoRZYwcs4_Wy7vWEAeSIHCs3UE8"/>
     <meta name="baidu-site-verification" content="5EmnBCPDrY" />
     
-    <title>Hello World | Lyfgta</title>
+    <title>Welcome | Lyfgta</title>
     <!--一言-->
     <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
     <!--mdui-->
