--- a/about/index.html
+++ b/about/index.html
@@ -191,15 +191,17 @@
             <div >
                 Copyright &copy;
                 李炎峰&nbsp&nbsp2020
-                &nbspTheme By
+                <br />驱动&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbsp主题
                 <a target="_blank" rel="noopener" href="https://github.com/TonyChenn/hexo-theme-mdm">mdm</a>
+		<br />
+		Email&nbsp&nbspceo@lyfgta.com
             </div>
         <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 		
 		<script src="/js/highlight.pack.js"></script>
 		<script>hljs.initHighlightingOnLoad();</script>
 		
-        总访问量 <span id="busuanzi_value_site_pv"></span> 次&nbsp&nbsp&nbsp总访客<span id="busuanzi_value_site_uv"></span>人
+        访问量 <span id="busuanzi_value_site_pv"></span> 次&nbsp&nbsp&nbsp访客<span id="busuanzi_value_site_uv"></span>人
         </div>
     </div>
 </footer>
