--- a/about/index.html
+++ b/about/index.html
@@ -191,10 +191,11 @@
             <div >
                 Copyright &copy;
                 李炎峰&nbsp&nbsp2020
-                <br />驱动&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbsp主题
+                <br /><br />驱动&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbsp主题&nbsp&nbsp
                 <a target="_blank" rel="noopener" href="https://github.com/TonyChenn/hexo-theme-mdm">mdm</a>
-		<br />
-		Email&nbsp&nbspceo@lyfgta.com
+		<br /><br />
+		邮箱&nbsp&nbspceo@lyfgta.com
+		<br /><br />
             </div>
         <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 		
