--- a/about/index.html
+++ b/about/index.html
@@ -191,11 +191,9 @@
             <div >
                 Copyright &copy;
                 李炎峰&nbsp&nbsp2020
-                <br /><br />驱动&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbsp主题&nbsp&nbsp
+                <br />邮箱&nbsp&nbspceo@lyfgta.com<br />驱动&nbspHexo&nbsp&nbsp|&nbsp&nbsp主题&nbsp
                 <a target="_blank" rel="noopener" href="https://github.com/TonyChenn/hexo-theme-mdm">mdm</a>
-		<br /><br />
-		邮箱&nbsp&nbspceo@lyfgta.com
-		<br /><br />
+		<br />
             </div>
         <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 		
