--- a/about/index.html
+++ b/about/index.html
@@ -164,19 +164,11 @@
   <div class="mdui-panel" mdui-panel="{accordion : true}">
     
 	<article id="page">
-	<p>我是<strong>TonyChenn</strong>，一名90后IT Boy,平时喜欢在安静的夜晚静静听几首音乐，偶尔也会良心发现看几本书，喜欢小动物，空闲时和朋友一块爬山，钓鱼。也是一名资深吃货。喜欢编程，职业是软件工程师，U3D客户端开发工程师，喜欢Unity，c#。</p>
-	<p><strong>座右铭</strong></p>
-	<hr>
-	<p>我始终相信 **人不逼自己一把，永远不知道自己有多优秀！**我可能比较笨，但我相信通过我的努力，未来也不会太差。</p>
-	<p><strong>关于个人博客</strong></p>
-	<hr>
-	<p>据说每个大佬都需要有一个自己的博客。趁着空闲使用<a href="https://hexo.io" target="_blank" rel="noopener">Hexo</a>+<a href="https://github.com" target="_blank" rel="noopener">Github</a>搭建了一个博客，希望能够记载自己学习，生活前进道路的点点滴滴，也希望能够帮助到别的人。如果你有好的想法欢迎通过下面方式与我联系，一起探讨。</p>
-	<p><strong>联系我</strong></p>
+	<p><strong>lyfgta</strong>这个名字是我高中时候玩圣安地列斯联机时候临时取的名字，看得出来我很喜欢玩GTA，以至于这个名字一直沿用至今（可能也想不出别的名字）。作为一名90后剪辑师,平时喜欢听各种类型的音乐，像是阿卡贝拉、约德尔、嘻哈等都格外喜欢。说的有点跑题了，建站的初衷就是想结交些有同样爱好的朋友。</p>
+	<p><strong>讨论交流</strong></p>
 	<hr>
 	<ul>
-	<li>QQ：<a href="https://wpa.qq.com/msgrd?v=3&amp;uin=852454151&amp;site=qq&amp;menu=yes" target="_blank" rel="noopener">852454151</a></li>
-	<li>Blog：<a href="https://TonyChenn.github.io" target="_blank" rel="noopener">TonyChenn.github.io</a></li>
-	<li>Github：<a href="https://github.com/TonyChenn" target="_blank" rel="noopener">https://github.com/TonyChenn</a></li>
+	<li>Discord：<a href="https://discord.com/invite/dde2XG9" target="_blank" rel="noopener">立即加入</a></li>
 	</ul>
 	</article>
     
