--- a/about/index.html
+++ b/about/index.html
@@ -164,7 +164,7 @@
   <div class="mdui-panel" mdui-panel="{accordion : true}">
     
 	<article id="page">
-	<p><strong>lyfgta</strong>这个名字是我高中时候玩圣安地列斯联机时候临时取的名字，看得出来我很喜欢玩GTA，以至于这个名字一直沿用至今（可能也想不出别的名字）。作为一名90后剪辑师,平时喜欢听各种类型的音乐，像是阿卡贝拉、约德尔、嘻哈等都格外喜欢。说的有点跑题了，建站的初衷就是想结交些有同样爱好的朋友。</p>
+	<p><strong>lyfgta</strong>这个名字是我高中时候玩圣安地列斯联机临时取的名字，看得出来我很喜欢玩GTA，以至于把名字沿用至今（可能也想不出别的名字）。作为一名90后剪辑师,平时喜欢听各种类型的音乐，像是阿卡贝拉、约德尔、嘻哈等都格外喜欢。说的有点跑题了，建站的初衷是想结交些有同样爱好的朋友。</p>
 	<p><strong>讨论交流</strong></p>
 	<hr>
 	<ul>
