--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
                 <a target="_blank" rel="noopener" href="https://github.com/TonyChenn/hexo-theme-mdm">mdm</a>
 		<br />
             </div>
-        <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+        <script async src="//lyfgta.gitee.io/js/busuanzi.pure.mini.js"></script>
 		
-		<script src="/js/highlight.pack.js"></script>
+		<script src="//lyfgta.gitee.io/js/highlight.pack.js"></script>
 		<script>hljs.initHighlightingOnLoad();</script>
 		
         访问量 <span id="busuanzi_value_site_pv"></span> 次&nbsp&nbsp&nbsp访客<span id="busuanzi_value_site_uv"></span>人
