--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <div class="mdui-card-media-covered mdui-card-media-covered-gradient">
             <div class="mdui-card-primary">
                 <div class="title_font float_left mdui-card-primary-title">
-                    GTA6发售前先玩这个！
+                    GTA6发售前玩它
                 </div>
             </div>
         </div>
@@ -251,7 +251,7 @@
 </div>
 </br>
 
-  </div>
+</div>
   <!--footer-->
   <footer class="mdui-color-indigo">
     <div class="mdui-container">
