--- a/about/index.html
+++ b/about/index.html
@@ -170,6 +170,7 @@
 	<ul>
 	<li>Discord：<a href="https://discord.com/invite/dde2XG9" target="_blank" rel="noopener">立即加入</a></li>
 	</ul>
+        <p><img src="//lyfgta.gitee.io/pic/zanshang/c.m.gif"></p>
 	</article>
     
   </div>
