--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
     
 <!--扫光-->
     <style type="text/css">
-.guangshu { display:block; position: relative; width:800px; height:450px; margin:0 auto;}
+.guangshu { display:block; position: relative; width:auto; height:auto; margin:0 auto;}
 .guangshu:before { content: ""; position: absolute; width:200px; height: 100%; top: 0; left: -150px; overflow: hidden;
 background: -moz-linear-gradient(left, rgba(255,255,255,0)0, rgba(255,255,255,.2)50%, rgba(255,255,255,0)100%);
 background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255,255,255,0)), color-stop(50%, rgba(255,255,255,.2)), color-stop(100%, rgba(255,255,255,0)));
