--- a/about/index.html
+++ b/about/index.html
@@ -42,7 +42,7 @@
     
 <!--扫光-->
     <style type="text/css">
-.guangshu { display:block; position: relative; width:auto; height:auto; margin:0 auto;}
+.guangshu { display:block; position: relative; width:931px; height:288px; margin:0 auto;}
 .guangshu:before { content: ""; position: absolute; width:200px; height: 100%; top: 0; left: -150px; overflow: hidden;
 background: -moz-linear-gradient(left, rgba(255,255,255,0)0, rgba(255,255,255,.2)50%, rgba(255,255,255,0)100%);
 background: -webkit-gradient(linear, left top, right top, color-stop(0%, rgba(255,255,255,0)), color-stop(50%, rgba(255,255,255,.2)), color-stop(100%, rgba(255,255,255,0)));
@@ -52,8 +52,8 @@ background: -o-linear-gradient(left, rgba(255,255,255,0)0, rgba(255,255,255,.2)5
 -moz-transform: skewX(-25deg)
 }
 
-.guangshu:hover:before { left: 150%; transition: left 1s ease 0s; }100% { left: 120px; top: 100px; }
-}
+.guangshu:hover:before { left: 150%; transition: left 1s ease 0s; }
+
     </style>
 <!--扫光-->
 
@@ -172,7 +172,7 @@ background: -o-linear-gradient(left, rgba(255,255,255,0)0, rgba(255,255,255,.2)5
 	<ul>
 	<li>Discord：<a href="https://discord.com/invite/dde2XG9" target="_blank" rel="noopener">立即加入</a></li>
 	</ul>
-        <p><img class="guangshu" src="//lyfgta.gitee.io/pic/zanshang/cm.png"></p>
+        <p><div class="guangshu"><img src="//lyfgta.gitee.io/pic/zanshang/cm.png"></div></p>
 	</article>
     
   </div>
