--- a/about/index.html
+++ b/about/index.html
@@ -52,6 +52,7 @@ background: -o-linear-gradient(left, rgba(255,255,255,0)0, rgba(255,255,255,.2)5
 -moz-transform: skewX(-25deg)
 }
 
+.guangshu:hover:before { left: 100%; transition: left 3s ease 0s; }
 .guangshu:active:before { left: 100%; transition: left 3s ease 0s; }
 
     </style>
