--- a/about/index.html
+++ b/about/index.html
@@ -123,6 +123,15 @@ background: -o-linear-gradient(left, rgba(255,255,255,0)0, rgba(255,255,255,.2)5
             </a>
             </li>
             <li class="mdui-divider"></li>
+
+            <li class="mdui-menu-item">
+            <a href="/Settings" class="mdui-ripple">
+                <i class="mdui-menu-item-icon mdui-icon material-icons">error_outline</i>
+                设置
+            </a>
+            </li>
+            <li class="mdui-divider"></li>
+
         
         </ul>
         <!--大屏-->
@@ -141,10 +150,23 @@ background: -o-linear-gradient(left, rgba(255,255,255,0)0, rgba(255,255,255,.2)5
             class="mdui-typo-title mdui-ripple mdui-ripple-white mdui-hidden-xs">
             关于
         </a>
+
+        <a href="/Settings"
+            class="mdui-typo-title mdui-ripple mdui-ripple-white mdui-hidden-xs">
+            设置
+        </a>
         
         <div class="mdui-toolbar-spacer"></div>
+        <!--
+        <div class="mdui-textfield mdui-textfield-expandable" style="max-width:500px;margin-right: -10px;">
+            <button class="mdui-textfield-icon mdui-btn mdui-btn-icon">
+                <i class="mdui-icon material-icons">search</i>
+            </button>
+            <input class="mdui-textfield-input mdui-text-color-white" id="local-search-input" type="text" placeholder="输入搜索内容..."/>
+            <button class="mdui-textfield-close mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">close</i></button>
+        </div>-->
 
-       <!--<button onclick="themeChange()"
+        <!--<button onclick="themeChange()"
                 class="mdui-btn mdui-btn-icon mdui-ripple mdui-text-color-white" 
                 mdui-tooltip="{content: '切换亮/暗色模式'}">
             <i class="mdui-icon material-icons" id="themeIcon">brightness_7</i>
