--- a/Settings/index.html
+++ b/Settings/index.html
@@ -173,7 +173,7 @@
 <div class="mdui-center post-content">
   <h1>设置</h1>
 
-        <h2>深色模式/浅色模式切换
+        <h2>深色/浅色切换
 	<div style="background:linear-gradient(to left,#FFFFFF,#b6b6b6,#FFFFFF);height:1px;"></div>
 	<h2 align="right">
         <button onclick="themeChange()"
