--- a/about/index.html
+++ b/about/index.html
@@ -207,7 +207,7 @@ background: -o-linear-gradient(left, rgba(255,255,255,0)0, rgba(255,255,255,.2)5
 	<h2>土豪打赏榜
 	<div style="background:linear-gradient(to left,#FFFFFF,#b6b6b6,#FFFFFF);height:1px;"></div>
 	</h2>
-        <p><div class="guangshu"><img src="//lyfgta.gitee.io/pic/zanshang/cm.png"></div></p>
+        <!--<p><div class="guangshu"><img src="//lyfgta.gitee.io/pic/zanshang/cm.png"></div></p>-->
 	</article>
     
   </div>
