--- a/index.html
+++ b/index.html
@@ -169,7 +169,37 @@
   <h3>全部文章</h3>
 </div>
 <div id="recent-posts" class="mdui-center">
-  
+ 
+
+
+<!--分割线-->
+    <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
+    <div class="mdui-card-media">
+        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//lyfgta.gitee.io/pic/landuo/landuo.jpg'}" draggable="false">
+        <div class="mdui-card-menu">
+            <!-- <button class="mdui-btn mdui-btn-icon mdui-text-color-white"><i class="mdui-icon material-icons">share</i></button> -->
+        </div>
+        <div class="mdui-card-media-covered mdui-card-media-covered-gradient">
+            <div class="mdui-card-primary">
+                <div class="title_font float_left mdui-card-primary-title">
+                    说唱新世代冠军是他？
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="mdui-card-actions">
+        
+        <div class="mdui-divider"></div>
+        <span class="info">
+        <i class="mdui-icon material-icons">&#xe923;</i>
+        2020-11-09
+        
+    </span>
+        <a class="info mdui-text-color-pink " href="/lyfgta.github.io/posts/16111/" style="float:right;">去围观</a>
+    </div>
+</div> 
+<!--分割线-->
+ 
 <!--分割线-->
     <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
     <div class="mdui-card-media">
@@ -276,6 +306,8 @@
 </div>           
 <!--分割线-->
   
+  
+
 </div>
 
 
