--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="baidu-site-verification" content="code-R7IpdMiFoW" />
     
     <title>Welcome | Lyfgta</title>
-    <!--一言-->
-    <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>
+    <!--一言
+    <script src="https://v1.hitokoto.cn/?encode=js&select=%23hitokoto" defer></script>-->
     <!--mdui-->
     
 <link rel="stylesheet" href="//cdnjs.loli.net/ajax/libs/mdui/0.4.2/css/mdui.min.css">
