--- a/Settings/index.html
+++ b/Settings/index.html
@@ -189,8 +189,9 @@
 	<h2>lyfgta网站统计</h2>
 	<div style="background:linear-gradient(to left,#FFFFFF,#b6b6b6,#FFFFFF);height:.5px;"></div>
 	<h3 align="right">
-	<script async src="//lyfgta.gitee.io/js/busuanzi.pure.mini.js"></script>
-	访问量 <span id="busuanzi_value_site_pv"></span> 次&nbsp|&nbsp访客<span id="busuanzi_value_site_uv"></span>人
+	<!-- 网站运行时间 -->
+	<p style="text-align:right;"><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span></p>
+	<script src="//lyfgta.gitee.io/js/time.js"></script>
 	</h3>
 	
 	
