--- a/Settings/index.html
+++ b/Settings/index.html
@@ -191,7 +191,7 @@
 	<h3 align="right">
 	<!-- 网站运行时间 -->
 	<p style="text-align:right;"><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span></p>
-	<script src="//lyfgta.gitee.io/js/time.js"></script>
+	<script src="//lyfgta.gitee.io/js/runtime.js"></script>
 	</h3>
 	
 	
