--- a/Settings/index.html
+++ b/Settings/index.html
@@ -185,12 +185,9 @@
         </button>
         </h2>
 	
-	
-	<h2>lyfgta网站统计</h2>
-	<div style="background:linear-gradient(to left,#FFFFFF,#b6b6b6,#FFFFFF);height:.5px;"></div>
 	<h3 align="right">
 	<!-- 网站运行时间 -->
-	<p style="text-align:right;"><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span></p>
+	<p style="text-align:center;"><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span></p>
 	<script src="//lyfgta.gitee.io/js/runtime.js"></script>
 	</h3>
 	
