--- a/about/index.html
+++ b/about/index.html
@@ -133,21 +133,15 @@
         </a>
         
         <div class="mdui-toolbar-spacer"></div>
-        <!--
+        <!--search-->
         <div class="mdui-textfield mdui-textfield-expandable" style="max-width:500px;margin-right: -10px;">
             <button class="mdui-textfield-icon mdui-btn mdui-btn-icon">
                 <i class="mdui-icon material-icons">search</i>
             </button>
             <input class="mdui-textfield-input mdui-text-color-white" id="local-search-input" type="text" placeholder="输入搜索内容..."/>
             <button class="mdui-textfield-close mdui-btn mdui-btn-icon"><i class="mdui-icon material-icons">close</i></button>
-        </div>-->
-
-        <!--<button onclick="themeChange()"
-                class="mdui-btn mdui-btn-icon mdui-ripple mdui-text-color-white" 
-                mdui-tooltip="{content: '切换亮/暗色模式'}">
-            <i class="mdui-icon material-icons" id="themeIcon">brightness_7</i>
-        </button>-->
-
+        </div>
+		&nbsp&nbsp&nbsp&nbsp
     </div>
 </div>
 <!--Header-->
