--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
 <link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm.css">
 <link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm_theme_dark.css">  
 <script src="//lyfgta.gitee.io/js/mdm.js"></script>
+<script src="//lyfgta.gitee.io/js/search.js"></script>
    
     <!--自动提交给百度-->
     <script>
