--- a/about/index.html
+++ b/about/index.html
@@ -104,10 +104,14 @@
   <div class="mdui-panel" mdui-panel="{accordion : true}">
     
 	<article id="page">
-	<p><strong>lyfgta</strong>这个名字是我高中时候玩圣安地列斯联机临时取的名字，看得出来我很喜欢玩GTA，以至于把名字沿用至今（可能也想不出别的名字）。作为一名90后剪辑师,平时喜欢听各种类型的音乐，像是阿卡贝拉、约德尔、嘻哈等都格外喜欢。说的有点跑题了，建站的初衷是想结交些有同样爱好的朋友。</p>
+	<h3>LYFGTA是高中我玩SAMP临时取的名字</h3>
+	<h3>为了纪念GTA带给我愉快的童年时期，于是用LYFGTA成立了此网站！</h3>
+	<h3>LYFGTA将会是年轻人喜欢的网站，当然，也不乏有热爱新潮的长者。</h3>
+	<h3>内容将主要围绕游戏、技术、音乐三种类型发布，和GTA有着密不可分的联系。</h3>
+	<h3>网站内容基本保持原创，部分文件转载自互联网。</h3>
 	<p><strong>讨论交流</strong></p>
 	<ul>
-	<li>Discord：<a href="https://discord.com/invite/dde2XG9" target="_blank" rel="noopener">立即加入</a></li>
+	<li>GTA交流QQ群：<a href="https://qm.qq.com/cgi-bin/qm/qr?k=ADUAb3egKzUZseFkb2JZ7ngUJe5CE6_W&authKey=+JTZQPyxJczPc7Hqhf8X7KASHF9BNJLZRoC7tJgwSLUEn+IyingFKz7QIYi/LRPR&noverify=0" target="_blank" rel="noopener">531776786 | 立即加入</a></li>
 	</ul>
 	<h2>土豪打赏榜
 	<div style="background:linear-gradient(to left,#FFFFFF,#b6b6b6,#FFFFFF);height:1px;"></div>
