--- a/p2/index.html
+++ b/p2/index.html
@@ -249,6 +249,7 @@
 <!--页码-->
 <div id="paginator">
   <span class="page-number current"><a href="/"><i class="mdui-icon material-icons">&#xe88a;</i></a></span>
+  <span class="page-number current"><a href="/"><i class="mdui-icon material-icons">&#xe5cb;</i></a></span>
 </div>
 </br>
 
