--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         2020-06-09
         
     </span>
-        <a class="info mdui-text-color-pink " href="/posts/16107/" style="float:right;">去围观</a>
+        <a class="info mdui-text-color-pink " href="/about" style="float:right;">去围观</a>
     </div>
 </div>           
 <!--分割线-->
