--- a/p2/index.html
+++ b/p2/index.html
@@ -250,6 +250,7 @@
 <div id="paginator">
   <span class="page-number current"><a href="/"><i class="mdui-icon material-icons">&#xe88a;</i></a></span>
   <span class="page-number current"><a href="/"><i class="mdui-icon material-icons">&#xe5cb;</i></a></span>
+  <span class="page-number current"><a href="/p2"><i class="mdui-icon material-icons">&#xe5dd;</i></a></span>
 </div>
 </br>
 
