--- a/Settings/index.html
+++ b/Settings/index.html
@@ -14,6 +14,7 @@
 	<!--theme-->
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm_theme_dark.css"> 
+	<link rel="stylesheet" href="//lyfgta.gitee.io/css/post.css">
     
     <title>设置 | Lyfgta</title>
   
@@ -101,10 +102,14 @@
     </div>
 </header>
 <body>
-  <div class="mdui-center" id="content-inner" style="width:95%; max-width:700pt;">
+  <div class="mdui-center" id="content-inner" style="width:100%; max-width:1920pt;">
 <div class="mdui-center post-content">
-  <h1>设置</h1>
 
+<div>
+  <div class="">
+    <article class="article-content mdui-container mdui-center mdui-shadow-12">
+	
+	<h1>设置</h1>
 
     <h2>深色/浅色切换</h2>
 	<div style="background:linear-gradient(to left,#FFFFFF,#b6b6b6,#FFFFFF);height:1px;"></div>
@@ -122,12 +127,11 @@
 	<script src="//lyfgta.gitee.io/js/runtime.js"></script>
 	</h3>
 	
-	
+	</div>
+	</div>
 
-        
-
-</div>
-</div>
+	</div>
+	</div>
 
   <!--footer-->
   <footer class="mdui-color-indigo">
