--- a/about/index.html
+++ b/about/index.html
@@ -122,7 +122,8 @@
 	&nbsp&nbsp&nbsp&nbsp内容基本原创，部分转载自互联网。</p>
 	<p><strong>讨论交流</strong></p>
 	<ul>
-	<li>GTAQQ群：<a href="https://qm.qq.com/cgi-bin/qm/qr?k=ADUAb3egKzUZseFkb2JZ7ngUJe5CE6_W&authKey=+JTZQPyxJczPc7Hqhf8X7KASHF9BNJLZRoC7tJgwSLUEn+IyingFKz7QIYi/LRPR&noverify=0" target="_blank" rel="noopener">531776786 | 立即加入</a></li>
+	<li>GTAQQ群：<br>
+	<a href="https://qm.qq.com/cgi-bin/qm/qr?k=ADUAb3egKzUZseFkb2JZ7ngUJe5CE6_W&authKey=+JTZQPyxJczPc7Hqhf8X7KASHF9BNJLZRoC7tJgwSLUEn+IyingFKz7QIYi/LRPR&noverify=0" target="_blank" rel="noopener">531776786 | 立即加入</a></li>
 	</ul>
 	</div>
 	</div>
