--- a/about/index.html
+++ b/about/index.html
@@ -14,7 +14,7 @@
 	<!--theme-->
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm_theme_dark.css">  
-	<link rel="stylesheet" href="//lyfgta.gitee.io/css/saoguang.css">
+	<link rel="stylesheet" href="//lyfgta.gitee.io/css/saoguangs.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/post.css">
 	
 	<title>关于 | Lyfgta</title>
