--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 	<script src="//cdnjs.loli.net/ajax/libs/mdui/0.4.2/js/mdui.min.js"></script>
 	<!--theme-->
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm.css">
-	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm_theme_dark.css">  
+	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm_theme_dark.css">
+	<link rel="stylesheet" href="//lyfgta.gitee.io/css/seachpage.css">
+	<link rel="stylesheet" href="//lyfgta.gitee.io/css/post.css">	
 
     <title>Welcome to Lyfgta</title>
 
@@ -105,6 +107,7 @@
 <div id="recent-posts" class="mdui-center">
  
 <br>
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="搜你想搜..." class="article-content mdui-container mdui-center mdui-shadow-12">
 <br>
 <!--分割线-->	
     <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
