--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<!--theme-->
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm_theme_dark.css">
-	<link rel="stylesheet" href="//lyfgta.gitee.io/css/seachpage.css">
-	<link rel="stylesheet" href="//lyfgta.gitee.io/css/post.css">	
+	<link rel="stylesheet" href="//lyfgta.gitee.io/css/post.css">
+	<link rel="stylesheet" href="//lyfgta.gitee.io/css/indexseach.css">
 
     <title>Welcome to Lyfgta</title>
 
@@ -109,6 +109,31 @@
 <br>
 <input type="text" id="myInput" onkeyup="myFunction()" placeholder="搜你想搜..." class="article-content mdui-container mdui-center mdui-shadow-12">
 <br>
+
+<div id="hidden">
+  <div class="">
+    <article class="article-content mdui-container mdui-center mdui-shadow-12">
+  <div class="mdui-panel" mdui-panel="{accordion : true}">
+
+  <ul id="myUL">
+
+  <li><a href="https://lyfgta.com/posts/16113/" target="_blank"><font size="3">AutoTune下载-音乐</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16114/" target="_blank"><font size="3">Audition下载-音乐</font></a></li>
+
+  <li><a href="https://lyfgta.com/posts/16109/" target="_blank"><font size="3">GTA6发售前玩它-游戏</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16108/" target="_blank"><font size="3">GTA5线上小助手-游戏</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16112/" target="_blank"><font size="3">GTA5冬季大更新-游戏</font></a></li>
+  
+  <li><a href="https://lyfgta.com/posts/16107/" target="_blank"><font size="3">Hello World-技术</font></a></li>
+  
+  <li><a href="https://lyfgta.com/posts/16111/" target="_blank"><font size="3">说唱新世代冠军-音乐</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16110/" target="_blank"><font size="3">Safari兼容H5播放器-技术</font></a></li>
+
+  </ul>
+  </div>
+  </div>
+  </div>
+  
 <!--分割线-->	
     <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
     <div class="mdui-card-media">
@@ -168,23 +193,7 @@
 
     <!--theme-->
 <script src="//lyfgta.gitee.io/js/mdm.js"></script>
-<script src="//lyfgta.gitee.io/js/search.js"></script>
-
-    <!--自动提交给百度-->
-    <script>
-        (function(){
-            var bp = document.createElement('script');
-            var curProtocol = window.location.protocol.split(':')[0];
-            if (curProtocol === 'https') {
-                bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
-            }
-            else {
-                bp.src = 'http://push.zhanzhang.baidu.com/push.js';
-            }
-            var s = document.getElementsByTagName("script")[0];
-            s.parentNode.insertBefore(bp, s);
-        })();
-    </script>
+<script src="//lyfgta.gitee.io/js/indexseach.js"></script>
 
 </body>
 <!--goTop-->
