--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <div id="recent-posts" class="mdui-center">
  
 <br>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="搜你想搜..." class="article-content mdui-container mdui-center mdui-shadow-12">
+<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search..." class="article-content mdui-container mdui-center mdui-shadow-12">
 <br>
 
 <div id="hidden">
