--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="mdui-card-media-covered mdui-card-media-covered-gradient">
             <div class="mdui-card-primary">
                 <div class="title_font float_left mdui-card-primary-title">
-                    LYFGTA简介
+                    Welcome to Lyfgta
                 </div>
             </div>
         </div>
