--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
         2020-06-09
         
     </span>
-        <a class="info mdui-text-color-pink " href="/about" style="float:right;">去围观</a>
+        <a class="info mdui-text-color-pink " href="/about" style="float:right;">AboutMe!</a>
     </div>
 </div>           
 <!--分割线-->
@@ -181,8 +181,8 @@
         <div style="text-align: center; padding: 20px;">
             <div >
                 Copyright &copy;
-                李炎峰&nbsp&nbsp2020
-                <br />邮箱&nbsp&nbspceo@lyfgta.com<br />驱动&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbsp主题&nbsp&nbspmdm
+                lyfgta&nbsp&nbsp2019-2077
+                <br />Email&nbsp&nbspceo@lyfgta.com<br />Power&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbspTheme&nbsp&nbspmdm
             </div>
         </div>
     </div>
