--- a/404.html
+++ b/404.html
@@ -129,7 +129,7 @@
         
         
     </span>
-        <a class="info mdui-text-color-pink " href="/about" style="float:right;">返回首页</a>
+        <a class="info mdui-text-color-pink " href="/" style="float:right;">返回首页</a>
     </div>
 </div>           
 <!--分割线-->
