--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <!--分割线-->	
     <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
     <div class="mdui-card-media">
-        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//lyfgta.gitee.io/pic/AboutMe.jpg'}" draggable="false">
+        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//lyfgta.gitee.io/pic/aboutme.png'}" draggable="false">
         <div class="mdui-card-menu">
             <!-- <button class="mdui-btn mdui-btn-icon mdui-text-color-white"><i class="mdui-icon material-icons">share</i></button> -->
         </div>
@@ -157,7 +157,7 @@
         2020-06-09
         
     </span>
-        <a class="info mdui-text-color-pink " href="/about" style="float:right;">About&nbsp&nbspMe!</a>
+        <a class="info mdui-text-color-pink " href="/about" style="float:right;">About&nbspMe!</a>
     </div>
 </div>           
 <!--分割线-->
