--- a/about/index.html
+++ b/about/index.html
@@ -142,9 +142,11 @@
     <div class="mdui-container">
         <div style="text-align: center; padding: 20px;">
             <div >
-                Copyright &copy;
-                李炎峰&nbsp&nbsp2020
-                <br />邮箱&nbsp&nbspceo@lyfgta.com<br />驱动&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbsp主题&nbsp&nbspmdm
+			<font size="3">
+                &copy;
+                2019-2077&nbspby&nbsplyfgta
+                <br />Power&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbspTheme&nbsp&nbspmdm
+			</font>
             </div>
         </div>
     </div>
