--- a/index.html
+++ b/index.html
@@ -180,9 +180,11 @@
     <div class="mdui-container">
         <div style="text-align: center; padding: 20px;">
             <div >
-                Copyright &copy;
-                lyfgta&nbsp&nbsp2019-2077
-                <br />Email&nbsp&nbspceo@lyfgta.com<br />Power&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbspTheme&nbsp&nbspmdm
+			<font size="3">
+                &copy;
+                2019-2077&nbspby&nbsplyfgta
+                <br />Power&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbspTheme&nbsp&nbspmdm
+			</font>
             </div>
         </div>
     </div>
