--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
   <li><a href="https://lyfgta.com/posts/16113/" target="_blank"><font size="3">AutoTune下载-音乐</font></a></li>
   <li><a href="https://lyfgta.com/posts/16114/" target="_blank"><font size="3">Audition下载-音乐</font></a></li>
 
+  <li><a href="https://lyfgta.com/posts/17000/" target="_blank"><font size="3">Bully汉化版下载</font></a></li>
+
   <li><a href="https://lyfgta.com/posts/16109/" target="_blank"><font size="3">GTA6发售前玩它-游戏</font></a></li>
   <li><a href="https://lyfgta.com/posts/16108/" target="_blank"><font size="3">GTA5线上小助手-游戏</font></a></li>
   <li><a href="https://lyfgta.com/posts/16112/" target="_blank"><font size="3">GTA5冬季大更新-游戏</font></a></li>
@@ -170,7 +172,7 @@
 
 <!--页码-->
 <div id="paginator">
-  <span class="page-number current"><a href="/p2"><i class="mdui-icon material-icons">&#xe409;</i></a></span>
+  <span class="page-number current"><a href="/p3"><i class="mdui-icon material-icons">&#xe409;</i></a></span>
   <span class="page-number current"><a href="/p2"><i class="mdui-icon material-icons">&#xe5dd;</i></a></span>
 </div>
 </br>
