--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
   <li><a href="https://lyfgta.com/posts/16113/" target="_blank"><font size="3">AutoTune下载-音乐</font></a></li>
   <li><a href="https://lyfgta.com/posts/16114/" target="_blank"><font size="3">Audition下载-音乐</font></a></li>
 
-  <li><a href="https://lyfgta.com/posts/17000/" target="_blank"><font size="3">Bully汉化版下载</font></a></li>
+  <li><a href="https://lyfgta.com/posts/17000/" target="_blank"><font size="3">Bully汉化版下载-游戏</font></a></li>
 
   <li><a href="https://lyfgta.com/posts/16109/" target="_blank"><font size="3">GTA6发售前玩它-游戏</font></a></li>
   <li><a href="https://lyfgta.com/posts/16108/" target="_blank"><font size="3">GTA5线上小助手-游戏</font></a></li>
