--- a/index.html
+++ b/index.html
@@ -122,6 +122,8 @@
 
   <li><a href="https://lyfgta.com/posts/17000/" target="_blank"><font size="3">Bully汉化版下载-游戏</font></a></li>
 
+  <li><a href="https://lyfgta.com/posts/17101/" target="_blank"><font size="3">Cyberpunk2077-游戏</font></a></li>
+
   <li><a href="https://lyfgta.com/posts/16109/" target="_blank"><font size="3">GTA6发售前玩它-游戏</font></a></li>
   <li><a href="https://lyfgta.com/posts/16108/" target="_blank"><font size="3">GTA5线上小助手-游戏</font></a></li>
   <li><a href="https://lyfgta.com/posts/16112/" target="_blank"><font size="3">GTA5冬季大更新-游戏</font></a></li>
