--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
   <li><a href="https://lyfgta.com/posts/16107/" target="_blank"><font size="3">Hello World-技术</font></a></li>
   <li><a href="https://lyfgta.com/posts/16115/" target="_blank"><font size="3">盒子刷机教程-技术</font></a></li>
   
+  <li><a href="https://lyfgta.com/posts/17102/" target="_blank"><font size="3">NW.js封装网站-技术</font></a></li>
+  
   <li><a href="https://lyfgta.com/posts/16111/" target="_blank"><font size="3">说唱新世代冠军是他-音乐</font></a></li>
   <li><a href="https://lyfgta.com/posts/16110/" target="_blank"><font size="3">Safari兼容H5播放器-技术</font></a></li>
 
