--- a/about/index.html
+++ b/about/index.html
@@ -115,13 +115,17 @@
   <div class="mdui-panel" mdui-panel="{accordion : true}">
     
 	<article id="page">
+	<h3 id="show_time" align="left">
+	<script src="//lyfgta.gitee.io/js/time.js"></script>
+	</h3> 
+	
 	<p align="left">
 	&nbsp&nbsp&nbsp&nbspLYFGTA是高中我玩SAMP想到的名字。
 	为了纪念GTA带给我愉快的童年时光，于是就有了LYFGTA网站！<br>
 	&nbsp&nbsp&nbsp&nbsp在这主要围绕游戏、技术、音乐三种类型发布内容，
 	大多数都和GTA有着密不可分的联系。<br>
 	&nbsp&nbsp&nbsp&nbsp内容基本原创，部分转载自互联网。</p>
-	<p><strong>讨论交流</strong></p>
+	<p><strong>&nbsp&nbsp&nbsp&nbsp讨论交流</strong></p>
 	<ul>
 	<li>LYFGTA官方QQ群：<br>
 	<a href="https://qm.qq.com/cgi-bin/qm/qr?k=ADUAb3egKzUZseFkb2JZ7ngUJe5CE6_W&authKey=+JTZQPyxJczPc7Hqhf8X7KASHF9BNJLZRoC7tJgwSLUEn+IyingFKz7QIYi/LRPR&noverify=0" target="_blank" rel="noopener">531776786 | 立即加入</a></li>
