--- a/Settings/index.html
+++ b/Settings/index.html
@@ -127,7 +127,6 @@
 	<h3 align="right">
 	<!-- 网站运行时间 -->
 	<p style="text-align:center;"><span id="timeDate">载入天数...</span><span id="times">载入时分秒...</span></p>
-	<script src="//lyfgta.gitee.io/js/runtime.js"></script>
 	</h3>
 
 	</div>
@@ -153,6 +152,7 @@
 
     <!--theme-->
 <script src="//lyfgta.gitee.io/js/mdm.js"></script>
+<script src="//lyfgta.gitee.io/js/yxtime.js"></script>
    
     <!--自动提交给百度-->
     <script>
