--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/post.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/indexseach.css">
 
-    <title>Welcome to Lyfgta</title>
+    <title>Lyfgta | 徕一发</title>
 
 </head>
 <!--header_bar-->
