--- a/index.html
+++ b/index.html
@@ -117,24 +117,24 @@
 
   <ul id="myUL">
 
-  <li><a href="https://lyfgta.com/posts/16113/" target="_blank"><font size="3">AutoTune下载-音乐</font></a></li>
-  <li><a href="https://lyfgta.com/posts/16114/" target="_blank"><font size="3">Audition下载-音乐</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16113/"><font size="3">AutoTune下载-音乐</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16114/"><font size="3">Audition下载-音乐</font></a></li>
 
-  <li><a href="https://lyfgta.com/posts/17000/" target="_blank"><font size="3">Bully汉化版下载-游戏</font></a></li>
+  <li><a href="https://lyfgta.com/posts/17000/"><font size="3">Bully汉化版下载-游戏</font></a></li>
 
-  <li><a href="https://lyfgta.com/posts/17101/" target="_blank"><font size="3">Cyberpunk2077-游戏</font></a></li>
+  <li><a href="https://lyfgta.com/posts/17101/"><font size="3">Cyberpunk2077-游戏</font></a></li>
 
-  <li><a href="https://lyfgta.com/posts/16109/" target="_blank"><font size="3">GTA6发售前玩它-游戏</font></a></li>
-  <li><a href="https://lyfgta.com/posts/16108/" target="_blank"><font size="3">GTA5线上小助手-游戏</font></a></li>
-  <li><a href="https://lyfgta.com/posts/16112/" target="_blank"><font size="3">GTA5冬季大更新-游戏</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16109/"><font size="3">GTA6发售前玩它-游戏</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16108/"><font size="3">GTA5线上小助手-游戏</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16112/"><font size="3">GTA5冬季大更新-游戏</font></a></li>
   
-  <li><a href="https://lyfgta.com/posts/16107/" target="_blank"><font size="3">Hello World-技术</font></a></li>
-  <li><a href="https://lyfgta.com/posts/16115/" target="_blank"><font size="3">盒子刷机教程-技术</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16107/"><font size="3">Hello World-技术</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16115/"><font size="3">盒子刷机教程-技术</font></a></li>
   
-  <li><a href="https://lyfgta.com/posts/17102/" target="_blank"><font size="3">NW.js封装网站-技术</font></a></li>
+  <li><a href="https://lyfgta.com/posts/17102/"><font size="3">NW.js封装网站-技术</font></a></li>
   
-  <li><a href="https://lyfgta.com/posts/16111/" target="_blank"><font size="3">说唱新世代冠军是他-音乐</font></a></li>
-  <li><a href="https://lyfgta.com/posts/16110/" target="_blank"><font size="3">Safari兼容H5播放器-技术</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16111/"><font size="3">说唱新世代冠军是他-音乐</font></a></li>
+  <li><a href="https://lyfgta.com/posts/16110/"><font size="3">Safari兼容H5播放器-技术</font></a></li>
 
   </ul>
   </div>
@@ -187,10 +187,10 @@
     <div class="mdui-container">
         <div style="text-align: center; padding: 20px;">
             <div >
-			<font size="3">
+			<font size="2">
                 &copy;
                 2019-2077&nbspby&nbsplyfgta
-                <br />Power&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbspTheme&nbsp&nbspmdm
+                <br />Power&nbsp&nbspby&nbsp&nbspHexo&nbsp&nbsp|&nbsp&nbspTheme&nbsp&nbspby&nbsp&nbspMdm
 			</font>
             </div>
         </div>
