--- a/about/index.html
+++ b/about/index.html
@@ -122,9 +122,8 @@
 	<p align="left">
 	&nbsp&nbsp&nbsp&nbspLYFGTA是高中我玩SAMP想到的名字。
 	为了纪念GTA带给我愉快的童年时光，于是就有了LYFGTA网站！<br>
-	&nbsp&nbsp&nbsp&nbsp在这主要围绕游戏、技术、音乐三种类型发布内容，
-	大多数都和GTA有着密不可分的联系。<br>
-	&nbsp&nbsp&nbsp&nbsp内容基本原创，部分转载自互联网。</p>
+	&nbsp&nbsp&nbsp&nbsp内容主要围绕游戏、技术、音乐三种类型发布，部分资源转载自互联网。
+	</p>
 	<p><strong>&nbsp&nbsp&nbsp&nbsp讨论交流</strong></p>
 	<ul>
 	<li>LYFGTA官方QQ群：<br>
