--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
   
   <li><a href="https://lyfgta.com/posts/17102/"><font size="3">NW.js封装网站-技术</font></a></li>
   
+  <li><a href="https://lyfgta.com/posts/17103/"><font size="3">RDR2OL快速升级-游戏</font></a></li>
+  
   <li><a href="https://lyfgta.com/posts/16111/"><font size="3">说唱新世代冠军是他-音乐</font></a></li>
   <li><a href="https://lyfgta.com/posts/16110/"><font size="3">Safari兼容H5播放器-技术</font></a></li>
 
