--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
 
     <title>Lyfgta | 徕一发</title>
 
+	<!--GoogleADS-->
+	<!-- Global site tag (gtag.js) - Google Ads: 605513132 -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-605513132"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+
+	  gtag('config', 'AW-605513132');
+	</script>
+	<!-- Event snippet for Website traffic conversion page -->
+	<script>
+	  gtag('event', 'conversion', {'send_to': 'AW-605513132/Nl9uCO25y_UBEKzL3aAC'});
+	</script>
+	<!--GoogleADS-->
+	
 </head>
 <!--header_bar-->
 <div class="mdui-appbar mdui-shadow-0" id="bar">
