--- a/index.html
+++ b/index.html
@@ -59,6 +59,13 @@
                 设置
             </a>
             </li>
+			
+			<li class="mdui-menu-item">
+            <a href="/ADS" class="mdui-ripple">
+                <i class="mdui-menu-item-icon mdui-icon material-icons">&#xe8b8;</i>
+                福利社
+            </a>
+            </li>
             <li class="mdui-divider"></li>
 
         
@@ -83,6 +90,11 @@
         <a href="/Settings"
             class="mdui-typo-title mdui-ripple mdui-ripple-white mdui-hidden-xs">
             设置
+        </a>
+		
+		<a href="/ADS"
+            class="mdui-typo-title mdui-ripple mdui-ripple-white mdui-hidden-xs">
+            福利社
         </a>
         
         <div class="mdui-toolbar-spacer"></div>
