--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/post.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/indexseach.css">
 
-    <title>Welcome to Lyfgta</title>
+    <title>页面未找到 Lyfgta</title>
 
 </head>
 <!--header_bar-->
