--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 			<li class="mdui-menu-item">
             <a href="/ADS" class="mdui-ripple">
                 <i class="mdui-menu-item-icon mdui-icon material-icons">&#xe8b8;</i>
-                福利社
+                福利社（包含广告！）
             </a>
             </li>
             <li class="mdui-divider"></li>
@@ -94,7 +94,7 @@
 		
 		<a href="/ADS"
             class="mdui-typo-title mdui-ripple mdui-ripple-white mdui-hidden-xs">
-            福利社
+            福利社（包含广告！）
         </a>
         
         <div class="mdui-toolbar-spacer"></div>
