--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
                 <i class="mdui-menu-item-icon mdui-icon material-icons">&#xe8b8;</i>
                 设置
             </a>
-            </li>
+            <li class="mdui-divider"></li>
 			
 			<li class="mdui-menu-item">
             <a href="/ADS" class="mdui-ripple">
-                <i class="mdui-menu-item-icon mdui-icon material-icons">&#xe8b8;</i>
+                <i class="mdui-menu-item-icon mdui-icon material-icons">&#xe611;</i>
                 福利社（包含广告！）
             </a>
             </li>
