--- a/index.html
+++ b/index.html
@@ -350,6 +350,8 @@
   
   <li><a href="https://lyfgta.com/posts/16111/"><font size="3">说唱新世代冠军是他-音乐</font></a></li>
   <li><a href="https://lyfgta.com/posts/16110/"><font size="3">Safari兼容H5播放器-技术</font></a></li>
+  
+  <li><a href="https://lyfgta.com/posts/17104/"><font size="3">喜庆小灯笼-技术</font></a></li>
 
   </ul>
   </div>
