--- a/index.html
+++ b/index.html
@@ -164,14 +164,14 @@
 <!--分割线-->	
     <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
     <div class="mdui-card-media">
-        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//lyfgta.gitee.io/pic/afdian/afd-fm.png'}" draggable="false">
+        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//ist6-4.filesor.com/pimpandhost.com/2/5/0/6/250621/b/v/Q/X/bvQXf/GTA5_l.jpg'}" draggable="false">
         <div class="mdui-card-menu">
             <!-- <button class="mdui-btn mdui-btn-icon mdui-text-color-white"><i class="mdui-icon material-icons">share</i></button> -->
         </div>
         <div class="mdui-card-media-covered mdui-card-media-covered-gradient">
             <div class="mdui-card-primary">
                 <div class="title_font float_left mdui-card-primary-title">
-                    成功入驻爱发电！
+                    GTA5_Mods
                 </div>
             </div>
         </div>
@@ -184,7 +184,7 @@
         
         
     </span>
-        <a class="info mdui-text-color-pink " href="//lyfgta.com/posts/17106/" style="float:right;">Look&nbspit&nbsp!</a>
+        <a class="info mdui-text-color-pink " href="//jq.qq.com/?_wv=1027&k=4UngQvOG" style="float:right;">立即加入Mod群</a>
     </div>
 </div>           
 <!--分割线-->
