--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <!--分割线-->	
     <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
     <div class="mdui-card-media">
-        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//raw.githubusercontent.com/lyfgta/lyfgta.github.io/master/pic/GTA5.png'}" draggable="false">
+        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//s1.imagehub.cc/images/2021/08/20/GTA5971dc21552effe93.png'}" draggable="false">
         <div class="mdui-card-menu">
             <!-- <button class="mdui-btn mdui-btn-icon mdui-text-color-white"><i class="mdui-icon material-icons">share</i></button> -->
         </div>
