--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
   <li><a href="https://lyfgta.com/posts/16109/"><font size="3">GTA6发售前玩它-游戏</font></a></li>
   <li><a href="https://lyfgta.com/posts/16108/"><font size="3">GTA5线上小助手-游戏</font></a></li>
   <li><a href="https://lyfgta.com/posts/16112/"><font size="3">GTA5冬季大更新-游戏</font></a></li>
-  <li><a href="https://lyfgta.com/posts/17105/"><font size="3">GTA5钢铁侠教程-游戏</font></a></li>
+  <li><a href="https://lyfgta.com/posts/17105/"><font size="3">全自动安装教程-游戏</font></a></li>
   
   <li><a href="https://lyfgta.com/posts/16107/"><font size="3">Hello World-技术</font></a></li>
   <li><a href="https://lyfgta.com/posts/16115/"><font size="3">盒子刷机教程-技术</font></a></li>
