--- a/p3/index.html
+++ b/p3/index.html
@@ -109,14 +109,14 @@
 <!--分割线-->
     <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
     <div class="mdui-card-media">
-        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//lyfgta.gitee.io/pic/GTA5Study/gtxfm.png'}" draggable="false">
+        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//s1.imagehub.cc/images/2021/08/21/bd753fa004f2008b00dfab448d5fff71020d3ccfd9bef882.png'}" draggable="false">
         <div class="mdui-card-menu">
             <!-- <button class="mdui-btn mdui-btn-icon mdui-text-color-white"><i class="mdui-icon material-icons">share</i></button> -->
         </div>
         <div class="mdui-card-media-covered mdui-card-media-covered-gradient">
             <div class="mdui-card-primary">
                 <div class="title_font float_left mdui-card-primary-title">
-                    GTA5钢铁侠教程
+                    全自动安装教程
                 </div>
             </div>
         </div>
