--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 
   <li><a href="https://lyfgta.com/posts/17101/"><font size="3">Cyberpunk2077-游戏</font></a></li>
 
+  <li><a href="https://lyfgta.com/posts/17106/"><font size="3">GTASA下载-游戏</font></a></li>
   <li><a href="https://lyfgta.com/posts/16109/"><font size="3">GTA6发售前玩它-游戏</font></a></li>
   <li><a href="https://lyfgta.com/posts/16108/"><font size="3">GTA5线上小助手-游戏</font></a></li>
   <li><a href="https://lyfgta.com/posts/16112/"><font size="3">GTA5冬季大更新-游戏</font></a></li>
@@ -164,7 +165,7 @@
 <!--分割线-->	
     <div id="post-item" class="mdui-shadow-1 mdui-center mdui-ripple mdui-hoverable">
     <div class="mdui-card-media">
-        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//s1.imagehub.cc/images/2021/08/20/GTA5971dc21552effe93.png'}" draggable="false">
+        <img class="img_item mdui-img-fluid" src="" onerror="{this.src='//r.photo.store.qq.com/psc?/V532CKVV2tZW5u0P5Ymp0bRwaU3v5QQF/45NBuzDIW489QBoVep5mcQxTrA.o0UsMtHFj0RC5Im7P6a1IX7WDlGKe0c*NdeYdQd2gYo298Q4bY5QiXV7jwBa2ttc.P*Uy01Zv4rUbuTk!/r'}" draggable="false">
         <div class="mdui-card-menu">
             <!-- <button class="mdui-btn mdui-btn-icon mdui-text-color-white"><i class="mdui-icon material-icons">share</i></button> -->
         </div>
