--- a/p2/index.html
+++ b/p2/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm_theme_dark.css">  
 
-    <title>末页 | Lyfgta</title>
+    <title>lyfgta|p2</title>
 
 </head>
 <!--header_bar-->
