--- a/p3/index.html
+++ b/p3/index.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm.css">
 	<link rel="stylesheet" href="//lyfgta.gitee.io/css/mdm_theme_dark.css">  
 
-    <title>lyfgta|p3</title>
+    <title>Lyfgta | P3</title>
 
 </head>
 <!--header_bar-->
